[package]
name = "cov-breaker"
version = "0.1.0"
authors = ["Miles Frankel <miles.frankel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# nalgebra = "0.25.3"

rand = "0.8.3"
rayon = "1.5.0"
coz = "0.1.3" # play with the coz profiler

[profile.release]
debug = 1
